<resources>
    <string name="app_name">Photos</string>
    <!--Login Page-->
    <string name="logo">Logo</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="required">required!"</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="welcome_back">Welcome back</string>

    <!--Photos Page-->
    <string name="image">Image</string>

    <!--Error Page-->
    <string name="oops_something_went_wrong">Oops! Something went wrong</string>
    <string name="log_back_in">Log Back In</string>
</resources>
